added selenoid class for autotests