@@ -30,14 +30,26 @@
     <build>
         <testSourceDirectory>src/test/java</testSourceDirectory>
         <plugins>
+            <plugin> <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M4</version>
+                <version>3.0.0-M3</version>
                 <configuration>
-                <includes>
-                    <groupId>org.apache.maven.plugins</groupId>
-                        <include>test/**/*</include>
-                    </includes>
+                    <parallel>all</parallel>
+                    <threadCountMethods>2</threadCountMethods>
+                    <reuseForks>true</reuseForks>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                        <includes>
+<!--                        <include>test/**/*</include>-->
+                            <include>SelenoidTest</include>
+                        </includes>
                     <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
             </plugin>
